--- a/고급문법/3.11.Promise.html
+++ b/고급문법/3.11.Promise.html
@@ -46,7 +46,7 @@
             total += item.price;
         }
         console.log(total);
-        // 에러발생
+        // 에러발생~
     </script>
 </body>
 </html>
